--- a/main/html/content-areas/styles.css
+++ b/main/html/content-areas/styles.css
@@ -1,23 +1,40 @@
 header{
     background-color: #1b4965;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    min-height: 140px;
+}
+
+header a {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    display: block;
+    border: solid 2px #5FA8D3;
+    border-radius: 5px;
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
 }
 
 .header-text{
     color: white;
     text-align: center;
-    position: relative;
     width: 100%;
     font-size: 25px;
-    right: 63px;
+    position: static;
 }
 
 #header-logo {
-    margin: 10px;
-    border: solid 2px #5FA8D3;
-    border-radius: 5px;
-    position: relative;
     display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border: 0;
+    border-radius: 5px;
+    object-fit: contain;
 }
 
 footer {
