updated stylesheet, fixed encoding, moved images in 1.1 to the images file
lots of things are modified as to get style sheet to work i had to manually change the encoding from UTF-16 LE to UTF-8 in all the files (idk why but the style sheet just wouldn't work without it.)

images were moved as when querying co-pilot it said that incorrect img tags could be the issue.. this did not end up being the issue but i just didnt move the image back.. we can move them when necessary

--- a/main/html/styles.css
+++ b/main/html/styles.css
@@ -54,6 +54,7 @@ header a {
 .main-topic img {
     border : solid 3px #1b4965;;
     border-radius : 20px;
+    background: linear-gradient(#205274,#417592 ); 
     height: 180px;
     width: 180px;
     margin: 15px 20px 0 20px;
