--- a/main/html/Other/styles.css
+++ b/main/html/Other/styles.css
@@ -64,3 +64,14 @@ footer {
 .spacer {
     height: 20px;
 } 
+
+form{
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 18px;
+    margin: 30px auto;
+    border-radius: 20px;
+    background-color: #bee7fe;
+    border: solid 3px #1b4965;
+    padding: 10px;
+    max-width: 275px;
+}
