--- a/main/html/employer-set-project/styles.css
+++ b/main/html/employer-set-project/styles.css
@@ -119,3 +119,37 @@ form{
     max-width: 800px;
 }
 
+arrow-Nav {
+    display: flex;
+    justify-content: center;
+    gap: 40px; /* space between arrows */
+    margin: 20px 0;
+}
+
+arrow-Nav a {
+    position: static; /* or just remove position */
+    margin: 0 20px;
+}
+
+
+#arrow {
+    background-color: #bee7fe;
+    display: block;
+    margin: 0;
+    border: 0;
+    border-radius: 5px;
+    object-fit: fill;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    margin: 20px 15px 20px 15px;
+    border-radius: 20px;
+    color: inherit;
+    border : solid 3px #1b4965;;
+    border-radius : 20px;
+    background-color: #bee7fe;    
+    margin: 15px 20px 0 20px;
+}
