--- a/main/html/content-areas/subtopic-styles.css
+++ b/main/html/content-areas/subtopic-styles.css
@@ -199,3 +199,9 @@ arrow-Nav a {
     background-color: #bee7fe;    
     margin: 15px 20px 0 20px;
 }
+
+table, th, td, tr{
+    width: auto;
+    margin: 20px 0;
+    border: solid 3px #000000;
+}
