--- a/main/html/Other/styles.css
+++ b/main/html/Other/styles.css
@@ -152,3 +152,73 @@ select:focus {
   background-color: #1b4965;
   color: white;
 }
+
+.menu-item {
+  position: relative;
+  font-family: 'Segoe UI', sans-serif;
+}
+
+.submenu {
+  display: none;
+  flex-direction: column;
+  background-color: rgba(37,97,133, 0.7);
+  align-items: center;
+}
+
+.submenu a {
+  font-size: 24px; 
+  padding: 8px 0; 
+  text-align: center;
+  font-family: 'Segoe UI', sans-serif;  width: 100%;
+}
+
+.menu-item:hover .submenu {
+  display: flex;
+  width: 100%;
+}
+
+.submenu a:hover {
+  background-color: rgba(50,120,160, 0.7);
+}
+
+
+.sidenav {
+  height: 75%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 140px;
+  left: 0;
+  background-color: #1B4965;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 20px;
+  font-family: 'Segoe UI', sans-serif;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  background-color: #256185;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
