did darkmode in about tlevel
:3

--- a/main/html/styles.css
+++ b/main/html/styles.css
@@ -19,7 +19,7 @@ body.darkmode{
     --header-bg-color: #073550;
     --header-text-color:white;
     --both-inner-box-color: #69B4E0;
-    --footer-color: #CAE9FF;
+    --footer-color: #1b4965;
     --footer-text-color: black;
     --switch-day-night: #205274;
     --switch-fill-color: #69B4E0;
