--- a/main/html/styles.css
+++ b/main/html/styles.css
@@ -1,5 +1,69 @@
+:root{
+    --header-bg-color: #CAE9FF;
+    --header-text-color:black;
+    --both-inner-box-color: aliceblue;
+    --footer-color:  #1b4965;
+    --footer-text-color: white;
+    --switch-day-night: #69B4E0;
+    --switch-fill-color: #205274;
+
+    --main-topic-box-color: linear-gradient(to bottom,#1b4965,#5FA8D3 );
+    --main-topic-img-color: linear-gradient(#3485bb,#61afd8 ); 
+    --esp-topic-box-color: linear-gradient(to bottom,#1b4965,#5FA8D3 );
+    --esp-topic-img-color: linear-gradient(#205274,#417592 );
+    --content-back-color: white;
+    --small-content-color: white;
+
+}
+body.darkmode{
+    --header-bg-color: #073550;
+    --header-text-color:white;
+    --both-inner-box-color: #69B4E0;
+    --footer-color: #CAE9FF;
+    --footer-text-color: black;
+    --switch-day-night: #205274;
+    --switch-fill-color: #69B4E0;
+
+    --main-topic-box-color: linear-gradient(to bottom, #5FA8D3, #1b4965 );
+    --main-topic-img-color: linear-gradient(#61afd8, #3485bb ); 
+    --esp-topic-box-color: linear-gradient(to bottom, #5FA8D3, #1b4965 );
+    --esp-topic-img-color: linear-gradient(#417592, #205274 );
+    --content-back-color: linear-gradient(to bottom, #001524, #003A63, #00518A);
+    --small-content-color: linear-gradient(to bottom , #002139, #00518A) ;
+    --content-area-text-bg-color: linear-gradient(to bottom, #00182A, #001E33);
+}
+
+#theme-switch{
+    top: 20px;
+    right: 20px;
+    height: 50px;
+    width: 70px;
+    padding: 0;
+    border-radius: 50px;
+    background-color: var(--switch-day-night);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+}
+
+#theme-switch svg{
+    fill: var(--switch-fill-color)
+}
+#theme-switch svg:last-child{
+    display: none;
+}
+
+.darkmode #theme-switch svg:first-child{
+    display: none;
+}
+
+.darkmode #theme-switch svg:last-child{
+    display: block;
+}
+
 header{
-    background-color: #CAE9FF;
+    background-color: var(--header-bg-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,7 +76,7 @@ header a {
     top: 10px;
     left: 10px;
     display: block;
-    border: solid 2px #fff;
+    border: solid 2px #fff; /*leave dis*/
     border-radius: 5px;
     width: 120px;
     height: 120px;
@@ -20,7 +84,7 @@ header a {
 }
 
 .header-text{
-    color: black;
+    color: var(--header-text-color);
     text-align: center;
     width: 100%;
     font-size: 25px;
@@ -44,7 +108,7 @@ header a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to bottom,#1b4965,#5FA8D3 );
+    background: var(--main-topic-box-color);
     width: 200px;
     height: 300px;
     margin: 20px 15px 20px 15px;
@@ -56,7 +120,7 @@ header a {
 .main-topic img {
     border : solid 3px #1b4965;;
     border-radius : 20px;
-    background: linear-gradient(#3485bb,#61afd8 ); 
+    background: var(--main-topic-img-color);
     height: 180px;
     width: 180px;
     margin: 15px 20px 0 20px;
@@ -64,7 +128,7 @@ header a {
 
 
 .main-topic h3 {
-    background-color: aliceblue;
+    background-color: var(--both-inner-box-color);
     border: solid 3px #1b4965;
     border-radius: 20px;
     width: 200px;
@@ -84,7 +148,7 @@ header a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to bottom,#1b4965,#5FA8D3 );
+    background: var(--esp-topic-box-color);
     width: 200px;
     height: 300px;
     margin: 20px 15px 20px 15px;
@@ -94,16 +158,16 @@ header a {
 }
 
 .esp-topic img {
-    border : solid 3px #1b4965;;
+    border : solid 3px #1b4965; /*leave this*/
     border-radius : 20px;
-    background: linear-gradient(#205274,#417592 ); 
+    background: var(--esp-topic-img-color);
     height: 180px;
     width: 180px;
     margin: 15px 20px 0 20px;
 }
 
 .esp-topic h3 {
-    background-color: aliceblue;
+    background-color: var(--both-inner-box-color);
     border: solid 3px #1b4965;
     border-radius: 20px;
     width: 200px;
@@ -118,27 +182,18 @@ header a {
     font-family: 'Segoe UI', sans-serif;
 }
 
-
-.content-area{
-    background: white;
-    max-width: auto;
-    height: auto;
-    margin: 0px 20px 20px 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-body{
-    margin:0;
+body {
+    margin: 0;
     padding: 0;
-    background-color: white;
+    background: var(--content-back-color);
+    color: var(--header-text-color);
+    transition: background 0.3s, color 0.3s;
 }
 
 
 footer {
-    background-color: #1b4965;
-    color: white;
+    background-color: var(--footer-color);
+    color: var(--footer-text-color);
     text-align: center;
     padding: 10px;
     margin: 0px;
@@ -246,7 +301,7 @@ arrow-Nav a {
 }
 
 .title {
-    background: white;
+    background: var(--content-area-text-bg-color);
     max-width: auto;
     height: auto;
     margin: 20px;
@@ -256,7 +311,7 @@ arrow-Nav a {
 }
 
 h2{ 
-    color: black;
+    color: var(--header-text-color);
     text-align: center;
     font-size: 24px;
     margin-top: 20px;
@@ -264,7 +319,7 @@ h2{
 }
 
 content {
-    background: white;
+    background: var(--content-back-color);
     width: 85%;
     height: auto;
     margin: 0 20px 0px 20px;
@@ -274,7 +329,7 @@ content {
 }
 
 .content-area{
-    background: white;
+    background: var(--small-content-color);
     max-width:inherit;
     height: auto;
     margin: 0px 20px 20px 20px;
