pointy on content area (forgot)

--- a/main/html/content-areas/styles.css
+++ b/main/html/content-areas/styles.css
@@ -32,6 +32,7 @@ body.darkmode{
     justify-content: center;
     align-items: center;
     position: fixed;
+    cursor: pointer;
 }
 
 #theme-switch svg{
