--- a/main/html/content-areas/styles.css
+++ b/main/html/content-areas/styles.css
@@ -206,3 +206,19 @@ body {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+content {
+    background: var(--content-back-color);
+    width: auto;
+    height: auto;
+    margin: 0 20px 0px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+span {
+color: white;
+}
+
