--- a/main/html/content-areas/styles.css
+++ b/main/html/content-areas/styles.css
@@ -29,12 +29,14 @@ body.darkmode{
     width: 70px;
     padding: 0;
     border-radius: 50px;
+    border-style: none;
     background-color: var(--switch-day-night);
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
+    position: absolute;
     cursor: pointer;
+    overflow: hidden; 
 }
 
 #theme-switch svg{
@@ -58,18 +60,18 @@ header{
     align-items: center;
     justify-content: center;
     position: relative;
-    min-height: 140px;
+    min-height: 100px;
 }
 
 header a {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 25px;
     display: block;
     border: solid 2px #5FA8D3; /*leave dis*/
     border-radius: 5px;
-    width: 120px;
-    height: 120px;
+    width: 60px;
+    height: 60px;
     overflow: hidden;
 }
 
@@ -77,7 +79,7 @@ header a {
     color: white;
     text-align: center;
     width: 100%;
-    font-size: 25px;
+    font-size: 18px;
     position: static;
     font-family: 'Segoe UI', sans-serif;
 }
